--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -424,6 +424,7 @@ header a:active {
 
 .section-fc{
     margin-top: 5%;
+    height: auto;
 }
 
 .fc-flex{
@@ -437,7 +438,7 @@ header a:active {
     order: 1;
     min-width: 40%;
     height: 100%;
-    /*widht: 400px;
+    /*width: 400px;
     and no height value*/
     flex: 1 0 46%;
     padding: 40px;
@@ -461,19 +462,24 @@ header a:active {
 }
 
 .fc-col-flex{
-    height:100%;
+    min-height:100%;
     display: flex;
     flex-direction: column;
 }
-.fc-col-flex:last-child{
-    padding-bottom: 20px;
+
+.fc-flex-item h2{
+    margin: 0;
 }
+/*.fc-col-flex:last-child{
+    padding-bottom: 20px;
+}*/
 
 .fc-col-item {
     order: 1;
-    height: 45%;
+    min-height: 45%;
     flex: 0 1 1;
     margin: 10px;
+    margin-bottom: 20px;
 }
 
 .fc-flex-ethos {
@@ -572,6 +578,8 @@ footer p {
 .footer-nav {
     list-style: none;
     float: right;
+    height: 100%;
+    
 }
 
 .footer-nav li,
@@ -583,6 +591,11 @@ footer p {
 .footer-nav li:last-child,
 .social-links li:last-child {
     margin: 0;
+}
+
+n.nav-break {
+    display: block;
+    
 }
 
 
